--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   <title>wstore</title>
 </head>
 
