--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <title>wstore</title>
 </head>
 
